--- a/src/components/Products/Products.module.css
+++ b/src/components/Products/Products.module.css
@@ -17,13 +17,14 @@
 
   .productName {
     font-size: 1rem;
-    font-weight: 200;
+    font-weight: 400;
     text-transform: uppercase;
     text-wrap: balance;
+    color: var(--grey-texts);
   }
 
   .productPrice {
-    font-weight: 200;
+    font-weight: 400;
     font-size: 1rem;
   }
 }
