Add: mejoras al carrito, estilos y boton de comprar

--- a/src/components/CartContent/CartElements.module.css
+++ b/src/components/CartContent/CartElements.module.css
@@ -3,11 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 80%;
+  margin: 0 auto;
   margin-top: 2rem;
 }
 
 .productCard {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   align-items: center;
@@ -15,7 +18,7 @@
   width: 78%;
   font-size: 1rem;
   padding: 1rem;
-  border-bottom: 1px solid var(--grey-texts);
+  border-top: 1px solid var(--grey-texts);
 }
 
 .productImage {
@@ -57,4 +60,40 @@
 
 .productText {
   font-size: 1rem;
+  font-weight: 400;
+  padding: 0.5rem;
+}
+
+.titleContainer {
+  align-self: flex-start;
+  margin-left: 6rem;
+  font-size: 0.7rem;
+}
+
+.titleContainer > h2 {
+  font-weight: 800;
+}
+
+.quantityContainer {
+  display: flex;
+  align-items: center;
+}
+
+.SubTotalContainer {
+  align-self: flex-end;
+  width: 29%;
+}
+
+.totalContainer {
+  align-self: flex-end;
+  width: 23%;
+}
+.totalContainer > p {
+  font-weight: 800;
+}
+
+.buttonContainer {
+  align-self: flex-end;
+  margin-right: 7rem;
+  margin-bottom: 1rem;
 }
