--- a/src/components/CartContent/CartElements.module.css
+++ b/src/components/CartContent/CartElements.module.css
@@ -97,3 +97,26 @@
   margin-right: 7rem;
   margin-bottom: 1rem;
 }
+
+.formContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  font-size: 0.7rem;
+  border-top: 1px solid var(--grey-texts);
+  padding: 1rem;
+}
+
+.formContainer :nth-child(1) {
+  display: flex;
+  flex-direction: column;
+}
+
+.input {
+  outline: none;
+  border: none;
+  border-bottom: 1px solid var(--black-titles);
+  padding: 0.8em;
+  font-size: 0.7rem;
+}
