Add: variable de entorno , CSS al link de orden

--- a/src/components/CartContent/CartElements.module.css
+++ b/src/components/CartContent/CartElements.module.css
@@ -120,3 +120,12 @@
   padding: 0.8em;
   font-size: 0.7rem;
 }
+
+.link {
+  text-decoration: none;
+  color: var(--black-titles);
+
+  &&:hover {
+    text-decoration: underline;
+  }
+}
