Add: arreglos para la vista mobile

--- a/src/components/CheckOut/CheckOut.module.css
+++ b/src/components/CheckOut/CheckOut.module.css
@@ -17,7 +17,6 @@ h3 {
   align-items: center;
   gap: 2rem;
   width: 50%;
-  border-left: 1px solid var(--grey-texts);
 }
 .checkOutItems > h2 {
   display: inline-block;
@@ -31,4 +30,14 @@ h3 {
 
 .itemsContainer > img {
   width: 10%;
+}
+
+@media (max-width: 768px) {
+  .itemsContainer > img {
+    width: 50%;
+  }
+
+  .checkOutItems {
+    border-top: 1px solid var(--grey-texts);
+  }
 }
